WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298046
[JSC] Fix shiftI64 spilling only on one side of a branch on 32-bit
https://bugs.webkit.org/show_bug.cgi?id=298046
Summary
[JSC] Fix shiftI64 spilling only on one side of a branch on 32-bit
Mikhail R. Gadelha
Reported
2025-08-28 11:28:22 PDT
Fixes import-mutable-global.js on 32-bit.
Attachments
Add attachment
proposed patch, testcase, etc.
Mikhail R. Gadelha
Comment 1
2025-08-28 11:41:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50015
EWS
Comment 2
2025-08-29 08:17:46 PDT
Committed
299328@main
(e4f7416dd860): <
https://commits.webkit.org/299328@main
> Reviewed commits have been landed. Closing PR #50015 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-08-29 08:18:15 PDT
<
rdar://problem/159448195
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug